--- a/app/views/statements/_modal.html.erb
+++ b/app/views/statements/_modal.html.erb
@@ -113,7 +113,7 @@
 	    formData: <%= @s3_direct_post.fields.to_json.html_safe %>,
 	    paramName: 'file',
 	    dataType: 'XML',
-	    replaceFileInput: true,
+	    replaceFileInput: false,
 			progressall: function (e, data) {
         var progress = parseInt(data.loaded / data.total * 100, 10);
         progress_bar.css('width', progress + '%')
@@ -153,6 +153,7 @@
       fail: function(e, data) {
 				console.log(e);
 				console.log(data);
+				replaceFileInput: true,
 				$('#errorMessage').show();
 				$('#errorMessage').removeClass('alert-success');
 				$('#errorMessage').addClass('alert-danger').html('Something Went Wrong in File Upload. Please Choose file Once Again!!!');
