after error div

--- a/app/views/statements/_modal.html.erb
+++ b/app/views/statements/_modal.html.erb
@@ -121,6 +121,7 @@
       start: function (e) {
         submit_button.prop('disabled', true);
         $('#errorMessage').removeClass('alert-danger').html("");
+        $('#errorMessage').removeClass('alert-success');
         progress_bar.
           css("background", "")
         progress_bar.				
