--- a/app/views/statements/_modal.html.erb
+++ b/app/views/statements/_modal.html.erb
@@ -66,7 +66,7 @@
 				<fieldset class="col-lg-12">
   				<legend><%= steps[3] %></legend>
 					<div id="file_upload" class="col-lg-12">
-						<%= f.file_field :url, accept: "*", id: 'direct-upload', class: "col-lg-12" %>
+						<%= f.file_field :url, accept: "*", id: 'direct-upload', class: "col-lg-12 fail" %>
 					</div>
 				</fieldset>
 		<% end %>
@@ -162,6 +162,7 @@
 				  backdrop: 'static',
 					keyboard: true
 				});
+				$( ".fail" ).empty();
 				$('#close_button').prop('disabled', false);
         progress_bar.
           css("background", "red")
