--- a/app/views/statements/_modal.html.erb
+++ b/app/views/statements/_modal.html.erb
@@ -160,7 +160,7 @@
         submit_button.prop('disabled', true);
 				$('#upload_modal').modal({
 				  backdrop: 'static',
-					keyboard: true
+					keyboard: false
 				});
 				$('#close_button').prop('disabled', false);
         progress_bar.
