--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -145,7 +145,7 @@
 		<div id="content" class="container-fluid">
 			<%= yield %>
 		</div>
-    <nav class="navbar navbar-inverse footer" style="background-color: #134061; margin-top: 20px">
+    <nav class="navbar navbar-inverse footer" style="background-color: #134061; margin:20px 0 0 0;">
       <div stlye="text-align: center; color: #fff" class="container-fluid">
         <div class="row">
           <div class="col-lg-offset-3 col-lg-9"> 
