--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -162,7 +162,7 @@
               'http://nhrebellion.org', target: '_blank' %></h3>
             <h4 class="col-lg-12" style="color: #fff">We're going to make systemic political corruption the 
               central issue of the 2016 presidential primary by asking every candidate, &ldquo;What specific 
-              reforms will you advance to end the corrupting influence of money in politics1111?&rdquo;</h4>
+              reforms will you advance to end the corrupting influence of money in politics?&rdquo;</h4>
             <h5 class="col-lg-12">&copy;2015 <%=link_to 'NH Rebellion',
               'http://nhrebellion.org', target: '_blank' %>. Some rights reserved.</h5>          
             <h5 class="col-lg-12"><%= link_to image_tag("https://i.creativecommons.org/l/by/3.0/80x15.png"), 
