--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -10,6 +10,7 @@
 	  <fieldset>
       <div class="col-lg-3">
         <input name="q" type="text" value="<%= params[:q] %>" class="form-control"/>
+        <!-- <input name="e" type="text" value="<%= params[:e] %>" class="form-control"/> -->
       </div>
       <div class="col-lg-1">    
         <input type="submit" value="Search" class="btn btn-info"/>
