--- a/app/views/statements/show.html.erb
+++ b/app/views/statements/show.html.erb
@@ -50,7 +50,10 @@
     <strong>Third Party URL:</strong>
     <%= @statement.third_party_url %>
   </p>
-
+  <p>
+    <strong>Tag:</strong>
+    <%= @statement.title %>
+  </p>
   <p>
     <strong>Approved:</strong>
     <%= @statement.approved %>
