--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -103,6 +103,13 @@
       																																			{}, { class: "form-control" } %>
         </div>
       </div>
+
+      <div class="form-group">
+        <%= f.label :tag, class: "col-lg-3 control-label" %>
+        <div class="col-lg-8">
+          <%= f.text_field :title, class: "form-control" %>
+        </div>
+      </div>
 	    <div class="form-group">
 	      <div class="col-lg-offset-3 col-lg-8">
 	  	  	<%= link_to 'Cancel', statements_path, class: "btn btn-default" %>
