--- a/app/views/statements/browse.html.erb
+++ b/app/views/statements/browse.html.erb
@@ -1,2 +1,37 @@
+<% if notice || alert %>
+<div class="row">
+  <div class="alert alert-dismissible alert-<%=notice ? 'success' : 'danger'%> col-lg-12">
+  	<button type="button" class="close" data-dismiss="alert">×</button>
+  	<%= notice || alert %>
+  </div>
+</div>
+<% end %>
+
+
 <h1 class="col-lg-12">The Answers</h1>
+<div class="ansbgq input-group">
+	<%= form_tag("/search", :method=>"get") do %>
+		<div class="col-lg-2">Candidate Name<br>
+			<input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
+		</div>
+		<div class="col-lg-2">Events<br>
+			<input name="e" type="text" class="form-control" placeholder="Events"/>
+		</div>
+		<div class="col-lg-2">Party Name<br>
+			<input name="p" type="text" class="form-control" placeholder="Party Name"/>
+		</div>
+		<div class="col-lg-2">State<br>
+			<input name="s" type="text" class="form-control" placeholder="State"/>
+		</div>
+		<div class="col-lg-2">City<br>
+			<input name="c" type="text" class="form-control" placeholder="City"/>
+		</div>
+		<!-- <span class="input-group-btn "> -->
+			<div class="col-lg-2">
+				<input type="submit" value="Search" class="btn btn-info candbgq12"/>
+			</div>
+		<!-- </span> -->
+	<% end %>
+</div>
+
 <%= render 'videos' %>
