--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,6 @@
 
 /*new css start*/
-.ansbgq{background:#ecf0f1; padding:10px; overflow:hidden; border:solid 1px #ccc;}
+.ansbgq{background:#ecf0f1; padding:10px; overflow:hidden; border:solid 1px #ccc; margin-bottom: 25px;}
 .candbgq1 {
     min-height: 20px;
     padding: 19px;
