tags field text area

--- a/app/views/statements/show.html.erb
+++ b/app/views/statements/show.html.erb
@@ -51,8 +51,8 @@
     <%= @statement.third_party_url %>
   </p>
   <p>
-    <strong>Tag:</strong>
-    <%= @statement.title %>
+    <strong>Tags:</strong>
+    <%= raw(sanitize(@statement.description)) %>
   </p>
   <p>
     <strong>Approved:</strong>
