--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -105,9 +105,9 @@
       </div>
 
       <div class="form-group">
-        <%= f.label :tag, class: "col-lg-3 control-label" %>
+        <%= f.label :tags, class: "col-lg-3 control-label" %>
         <div class="col-lg-8">
-          <%= f.text_field :title, class: "form-control" %>
+          <%= f.text_area :description, class: "form-control", rows: 5%>
         </div>
       </div>
 	    <div class="form-group">
