--- a/app/views/statements/browse.html.erb
+++ b/app/views/statements/browse.html.erb
@@ -17,14 +17,11 @@
 		<div class="col-lg-2">Events<br>
 			<input name="e" type="text" class="form-control" placeholder="Events"/>
 		</div>
-		<div class="col-lg-2">Party Name<br>
-			<input name="p" type="text" class="form-control" placeholder="Party Name"/>
+		<div class="col-lg-2">Events Date<br>
+			<input name="d" type="text" class="datepicker form-control" placeholder="Events Date"/>
 		</div>
-		<div class="col-lg-2">State<br>
-			<input name="s" type="text" class="form-control" placeholder="State"/>
-		</div>
-		<div class="col-lg-2">City<br>
-			<input name="c" type="text" class="form-control" placeholder="City"/>
+		<div class="col-lg-2">Venues<br>
+			<input name="v" type="text" class="form-control" placeholder="Venues"/>
 		</div>
 		<!-- <span class="input-group-btn "> -->
 			<div class="col-lg-2">
@@ -35,3 +32,4 @@
 </div>
 
 <%= render 'videos' %>
+
