--- a/app/views/statements/show.html.erb
+++ b/app/views/statements/show.html.erb
@@ -52,7 +52,7 @@
   </p>
   <p>
     <strong>Tags:</strong>
-    <%= raw(sanitize(@statement.description)) %>
+    <%= @statement.tags %>
   </p>
   <p>
     <strong>Approved:</strong>
