--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -56,6 +56,12 @@
         </div>
       </div>
       <div class="form-group">
+        <%= f.label :tags, class: "col-lg-3 control-label" %>
+        <div class="col-lg-8">
+          <%= f.text_area :tags, class: "form-control", rows: 5%>
+        </div>
+      </div>
+      <div class="form-group">
         <%= f.label :campaign_id, class: "col-lg-3 control-label" %>
         <div class="col-lg-8">
     		<%= f.select :campaign_id, 
@@ -101,13 +107,6 @@
       																																			:name, 
       																																			@statement.event_day_id),
       																																			{}, { class: "form-control" } %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :tags, class: "col-lg-3 control-label" %>
-        <div class="col-lg-8">
-          <%= f.text_area :description, class: "form-control", rows: 5%>
         </div>
       </div>
 	    <div class="form-group">
