--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -58,7 +58,7 @@
       <div class="form-group">
         <%= f.label :tags, class: "col-lg-3 control-label" %>
         <div class="col-lg-8">
-          <%= f.text_area :tags, class: "form-control", rows: 5%>
+          <%= f.text_field :tag_list, class: "form-control"%>
         </div>
       </div>
       <div class="form-group">
