Hide Browse Div

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -26,4 +26,7 @@
 .ciclq_red{background:#ff2c21; width:50px;height:50px; box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -o-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); border-radius:100px; margin:10px;}
 .ciclq_gray{background:#bfbfbf; width:50px;height:50px; box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -o-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); border-radius:100px; margin:10px;}
 
+/*Statement browse hide*/
+#stbrowse{display: none;}
+/*end*/
 /*new css end*/
