--- a/app/views/statements/browse.html.erb
+++ b/app/views/statements/browse.html.erb
@@ -9,7 +9,7 @@
 
 
 <h1 class="col-lg-12">The Answers</h1>
-<div class="ansbgq input-group">
+<div class="ansbgq input-group" id="stbrowse">
 	<%= form_tag("/search", :method=>"get") do %>
 		<div class="col-lg-2">Candidate Name<br>
 			<input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
