--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -15,73 +15,44 @@
       <div class="col-lg-1">    
         <input type="submit" value="Search" class="btn btn-info"/>
       </div>
-      <h3 class="col-lg-offset-6 col-lg-2"><%= pluralize(@events.size, 'result') %></h3>
+      <h3 class="col-lg-offset-6 col-lg-2"> Result(s): <span id="searchResult"></span></h3>
     </fieldset>
   </form>
 </div>
 
 <div class="col-lg-12" style="margin-top: 20px">
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th>Candidate(s)</th>
-        <th>Speaker(s)</th>
-        <th>Event Name</th>
-        <th>Location</th>
-        <th>Public</th>
-      </tr>
-    </thead>
-    <tbody>
-    <% @events.each do |e| %>
-      <tr>
-        <td><%e.candidates.each do |c| %>
-              <%=link_to(c.person_name, c) %>
-            <% end %></td>
-        <td><%= e.format_speakers %></td>
-        <td><%= link_to e.title, e %></td>
-        <td><%= e.format_location %></td>
-        <td><%= e.public? ? 'Yes' : 'No' %></td>
-      </tr>
-    <% end %>
-    
-    <% @candidates.each do |c| %>
-      <tr>
-        <td><%= link_to(c.person_name, c)%></td>
-        <% c.events.each do |e| %>
-        <td><%= e.format_speakers %></td>
-        <td><%= link_to e.title, e %></td>
-        <td><%= e.format_location %></td>
-        <td><%= e.public? ? 'Yes' : 'No' %></td>
+  <% if @statements.blank? %>
+    <div class="warning">Sorry, We don't found any result.</div>
+  <% else %>
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Candidate(s)</th>
+          <th>Speaker(s)</th>
+          <th>Event Name</th>
+          <th>Location</th>
+          <th>Public</th>
+          <th>Date</th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @statements.each do |statement| %>
+        <% if search_filter(statement) %>
+          <tr class="search_row">
+            <td><%= link_to(statement.candidate.person_name, statement.candidate)%></td>
+            <% statement.candidate.events.each do |event| %>
+            <td><%= event.format_speakers %></td>
+            <td><%= link_to event.title, event %></td>
+            <td><%= event.format_location %></td>
+            <td><%= event.public? ? 'Yes' : 'No' %></td>
+            <% end %>
+            <td><%= statement.event_day.date.strftime("%m/%d/%Y") %></td>
+          </tr>
         <% end %>
-      </tr>
-    <% end %>
-
-    <% @event_days.each do |e| %>
-      <tr>
-        <td><%e.event.candidates.each do |c| %>
-              <%=link_to(c.person_name, c) %>
-            <% end %></td>
-        <td><%= e.event.format_speakers %></td>
-        <td><%= link_to e.event.title, e.event %></td>
-        <td><%= e.event.format_location %></td>
-        <td><%= e.event.public? ? 'Yes' : 'No' %></td>
-      </tr>
-    <% end %>
-
-    <% @venues.each do |foo| %>
-
-      <% foo.events.each do |e| %>
-      <tr>
-        <td><%e.candidates.each do |c| %>
-              <%=link_to(c.person_name, c) %>
-            <% end %></td>
-        <td><%= e.format_speakers %></td>
-        <td><%= link_to e.title, e %></td>
-        <td><%= e.format_location %></td>
-        <td><%= e.public? ? 'Yes' : 'No' %></td>
-      </tr>
-    <% end %>
-    <% end %>
-    </tbody>
-  </table>
+      <% end %>
+      </tbody>
+    </table>
+  <% end %>
 </div>
+
+<script>$('#searchResult').html($(".search_row").length)</script>
