fixed issues of nil class of event day

--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -46,7 +46,7 @@
             <td><%= event.format_location %></td>
             <td><%= event.public? ? 'Yes' : 'No' %></td>
             <% end %>
-            <td><%= statement.event_day.date.strftime("%m/%d/%Y") %></td>
+            <td><%= statement.event_day.date.strftime("%m/%d/%Y") if statement.event_day.present? %></td>
           </tr>
         <% end %>
       <% end %>
