--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -4,21 +4,36 @@
   	<%= notice || alert %>
   </div>
 <% end %>
+<h1 class="col-lg-12">The Answers</h1>
+<div class="ansbgq input-group" id="stbrowse">
+  <%= form_tag("/search", :method=>"get") do %>
+    <div class="col-lg-2">Candidate Name<br>
+      <input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
+    </div>
+    <div class="col-lg-2">Events<br>
+      <input name="e" type="text" class="form-control" placeholder="Events"/>
+    </div>
+    <div class=" col-lg-3">
+      <div id="event-day-date" class="input-group">
+        Events Date<br>
+        <input name="d" type="text" class="datepicker form-control" placeholder="Events Date" id="event_day_date"/>
+        <span class="input-group-addon">
+          <span class="glyphicon glyphicon-calendar"></span>
+        </span>
+      </div>
+    </div>
+    <div class="col-lg-2">Venues<br>
+      <input name="v" type="text" class="form-control" placeholder="Venues"/>
+    </div>
+    <!-- <span class="input-group-btn "> -->
+      <div class="col-lg-2">
+        <input type="submit" value="Search" class="btn btn-info candbgq12"/>
+      </div>
+    <!-- </span> -->
+  <% end %>
 
-<div class="col-lg-12">
-  <form method="get" action="search" class="col-lg-12">
-	  <fieldset>
-      <div class="col-lg-3">
-        <input name="q" type="text" value="<%= params[:q] %>" class="form-control"/>
-        <!-- <input name="e" type="text" value="<%= params[:e] %>" class="form-control"/> -->
-      </div>
-      <div class="col-lg-1">    
-        <input type="submit" value="Search" class="btn btn-info"/>
-      </div>
-      <h3 class="col-lg-offset-6 col-lg-2"> Result(s): <span id="searchResult"></span></h3>
-    </fieldset>
-  </form>
 </div>
+<h3 class="col-lg-offset-6 col-lg-2"> Result(s): <span id="searchResult"></span></h3>
 
 <div class="col-lg-12" style="margin-top: 20px">
   <% if @statements.blank? %>
@@ -56,3 +71,8 @@
 </div>
 
 <script>$('#searchResult').html($(".search_row").length)</script>
+<script>
+  $('#event-day-date').datetimepicker({
+    format: 'MM/DD/YYYY'
+  });
+</script>
