--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,8 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+ *= require token-input
  *= require_self
+ *= require_tree .
  */
- #errorMessage{display:none; margin: 0; text-align: center;}
+ 
