--- a/app/views/statements/index.html.erb
+++ b/app/views/statements/index.html.erb
@@ -42,7 +42,7 @@
 <script type="text/javascript">
   $(document).on('click', '.edit-statement', function(){
     var id = $(this).attr('statement_id');
-    var path = window.location.href+"/"+id+"/edit"  
+    var path = "https://"+window.location.host+"/statements/"+id+"/edit"  
     window.location.href = path
   });
 </script>
