--- a/app/views/statements/show.html.erb
+++ b/app/views/statements/show.html.erb
@@ -62,13 +62,15 @@
     
   <ul class="pager">
   	<li class="next">
-      <%= link_to 'Edit →', edit_statement_path(@statement), class: "edit-statement" %>
+      <%= link_to 'Edit →', edit_statement_path(@statement), class: "edit-statement", statement_id: @statement.id %>
     </li>
   </ul>
 </div>
 <script type="text/javascript">
   $(document).on('click', '.edit-statement', function(){
-    var path = window.location.href+"/edit"
+    var id = $(this).attr('statement_id');
+    var path = "https://"+window.location.host+"/statements/"+id+"/edit"  
     window.location.href = path
+
   });
 </script>
