--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -27,12 +27,41 @@
 .ciclq_red{background:#ff2c21; width:50px;height:50px; box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -o-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); border-radius:100px; margin:10px;}
 .ciclq_gray{background:#bfbfbf; width:50px;height:50px; box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -webkit-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); -o-box-shadow: 0 7px 4px rgba(0, 0, 0, 0.25); border-radius:100px; margin:10px;}
 .token-input-list{
-  width: 96% !important;
+  width: 100% !important;
 }
 .token-input-dropdown{
-  width: 226px !important;
+  width: 234px !important;
 }
 /*Statement browse hide*/
 
 /*end*/
 /*new css end*/
+.frm-padmar{margin:0px !important; padding:0px !important;}
+.martp{margin-top:25px;}
+.martp2{background:#ecf0f1!important; margin:0px !important; border:solid 1px #ccc; margin-bottom: 25px;}
+.frm-padmar2{padding:0px !important;}
+.rsl-txt{color:#134061; font-weight: bold; padding:0px !important;}
+ul.token-input-list li input{-moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: white;
+    border-color: #dce4ec -moz-use-text-color #dce4ec #dce4ec;
+    border-image: none;
+    border-width: 2px 4px 2px 2px;
+    padding: 11px 8px;
+}
+ul.token-input-list{background-color: #fff;
+    border: 2px solid #dce4ec;
+    clear: left;
+    cursor: text;
+    font-family: Verdana;
+    border-radius: 4px;
+    font-size: 12px;
+    height: auto !important;
+    list-style-type: none;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    width: 400px;
+    z-index: 999;}
