--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,88 +1,128 @@
 <% if notice || alert %>
-  <div class="alert alert-dismissible alert-<%=notice ? 'success' : 'danger'%> col-lg-12">
-  	<button type="button" class="close" data-dismiss="alert">×</button>
-  	<%= notice || alert %>
-  </div>
-<% end %>
-<h1 class="col-lg-12">The Answers</h1>
-<div class="ansbgq input-group" id="stbrowse">
-  <%= form_tag("/search", :method=>"get") do %>
-    <div class="col-lg-2">Candidate Name<br>
-      <input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
-    </div>
-    <div class="col-lg-2">Events<br>
-      <input name="e" type="text" class="form-control" placeholder="Events"/>
-    </div>
-    <div class=" col-lg-3">
-      <div id="event-day-date" class="input-group">
-        Events Date<br>
-        <input name="d" type="text" class="datepicker form-control" placeholder="Events Date" id="event_day_date"/>
-        <span class="input-group-addon">
-          <span class="glyphicon glyphicon-calendar"></span>
-        </span>
-      </div>
-    </div>
-    <div class="col-lg-2">Venues<br>
-      <input name="v" type="text" class="form-control" placeholder="Venues"/>
-    </div>
-    <!-- <span class="input-group-btn "> -->
-      <div class="col-lg-2">
-        <input type="submit" value="Search" class="btn btn-info candbgq12"/>
-      </div>
-    <!-- </span> -->
-  <% end %>
-
+<div class="alert alert-dismissible alert-<%=notice ? 'success' : 'danger'%> col-lg-12">
+ <button type="button" class="close" data-dismiss="alert">×</button>
+ <%= notice || alert %>
 </div>
-<h3 class="col-lg-2"> Result(s): <span id="searchResult"></span></h3>
+<% end %>
 
-<div class="col-lg-12" style="margin-top: 20px">
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 frm-padmar">
+         <h2>The Answer</h2>
+      <div class="panel panel-default">
+        
+        <div class="panel-body martp2">
+          <%= form_tag("/search", :method=>"get") do %>
+            <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-sm-12 adnwstdnt">Candidate Name</label>
+                  <div class="col-sm-12">
+                    <input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-sm-12">Event</label>
+                  <div class="col-sm-12">
+                    <input name="e" type="text" class="form-control" placeholder="Events"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 frm-padmar">
+                  <div class="form-group">
+                    <div id="event-day-date" class="col-sm-12 input-group">
+                      <label for="inputEmail3" class="col-sm-12">Event Date</label>
+                      <div class='input-group date'>
+                      <input name="d" type="text" class="datepicker form-control" placeholder="Events Date" id="event_day_date"/>
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-sm-12">Venues</label>
+                  <div class="col-sm-12">
+                    <input name="v" type="text" class="form-control" placeholder="Venues"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <div class="col-sm-12">
+                    <input type="submit" value="Search" class="btn btn-info martp"/>
+                 </div>
+               </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+<h4 class="col-lg-12 rsl-txt"> Result(s): <span id="searchResult"></span></h4>
+<div class="clearfix"></div>
+
+<div class="col-lg-12 frm-padmar2" style="margin-top: 20px">
   <% if @statements.blank? %>
-    <div class="warning">Sorry, We don't found any result.</div>
+  <div class="warning">Sorry, We don't found any result.</div>
   <% else %>
-    <table class="table table-striped table-hover">
-      <thead>
-        <tr>
-          <th>Candidate(s)</th>
-          <th>Speaker(s)</th>
-          <th>Event Name</th>
-          <th>Location</th>
-          <th>Date</th>
-          <th>Public</th>
-        </tr>
-      </thead>
-      <tbody>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Candidate(s)</th>
+        <th>Speaker(s)</th>
+        <th>Event Name</th>
+        <th>Location</th>
+        <th>Date</th>
+        <th>Public</th>
+      </tr>
+    </thead>
+    <tbody>
       <% @statements.each do |statement| %>
-        <% if search_filter(statement) %>
-          <tr class="search_row">
-            <td>
-              <%= link_to(statement.candidate.person_name, statement.candidate)%>
-            </td>
-            <td>
-              <%= statement.event_day.present? ? (statement.event_day.event.format_speakers.present? ? statement.event_day.event.format_speakers : 'N/A') : 'N/A' %>
-            </td>
-            <td>
-              <%= statement.event_day.present? ? (link_to statement.event_day.event.title, event_path(statement.event_day.event)) : 'N/A' %>
-            </td>
-            <td>
-              <%= statement.event_day.present? ? statement.event_day.event.format_location : 'N/A' %>
-            </td>
-            <td>
-              <%= statement.event_day.present? ? statement.event_day.date.strftime("%m/%d/%Y") : 'N/A' %>
-            </td>
-            <td>
-              <%= statement.event_day.present? ? (statement.event_day.event.public ? 'Yes' : 'No') : 'N/A' %>
-            </td>
-          </tr>
-        <% end %>
+      <% if search_filter(statement) %>
+      <tr class="search_row">
+        <td>
+          <%= link_to(statement.candidate.person_name, statement.candidate)%>
+        </td>
+        <td>
+          <%= statement.event_day.present? ? (statement.event_day.event.format_speakers.present? ? statement.event_day.event.format_speakers : 'N/A') : 'N/A' %>
+        </td>
+        <td>
+          <%= statement.event_day.present? ? (link_to statement.event_day.event.title, event_path(statement.event_day.event)) : 'N/A' %>
+        </td>
+        <td>
+          <%= statement.event_day.present? ? statement.event_day.event.format_location : 'N/A' %>
+        </td>
+        <td>
+          <%= statement.event_day.present? ? statement.event_day.date.strftime("%m/%d/%Y") : 'N/A' %>
+        </td>
+        <td>
+          <%= statement.event_day.present? ? (statement.event_day.event.public ? 'Yes' : 'No') : 'N/A' %>
+        </td>
+      </tr>
       <% end %>
-      </tbody>
-    </table>
+      <% end %>
+    </tbody>
+  </table>
   <% end %>
+</div>
+</div>
 </div>
 
 <script>$('#searchResult').html($(".search_row").length)</script>
 <script>
-  $('#event-day-date').datetimepicker({
-    format: 'MM/DD/YYYY'
-  });
+$('#event-day-date').datetimepicker({
+  format: 'MM/DD/YYYY'
+});
 </script>
