--- a/app/views/statements/browse.html.erb
+++ b/app/views/statements/browse.html.erb
@@ -8,33 +8,67 @@
 <% end %>
 
 
-<h1 class="col-lg-12">The Answers</h1>
-<div class="ansbgq input-group" id="stbrowse">
-  <%= form_tag("/search", :method=>"get") do %>
-    <div class="col-lg-2">Candidate Name<br>
-      <input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
-    </div>
-    <div class="col-lg-2">Events<br>
-      <input name="e" type="text" class="form-control" placeholder="Events"/>
-    </div>
-    <div class=" col-lg-3">
-      <div id="event-day-date" class="input-group">
-        Events Date<br>
-        <input name="d" type="text" class="datepicker form-control" placeholder="Events Date" id="event_day_date"/>
-        <span class="input-group-addon">
-          <span class="glyphicon glyphicon-calendar"></span>
-        </span>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 frm-padmar">
+         <h2>The Answer</h2>
+      <div class="panel panel-default">
+        
+        <div class="panel-body martp2">
+          <%= form_tag("/search", :method=>"get") do %>
+            <div class="row">
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-sm-12 adnwstdnt">Candidate Name</label>
+                  <div class="col-sm-12">
+                    <input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-sm-12">Event</label>
+                  <div class="col-sm-12">
+                    <input name="e" type="text" class="form-control" placeholder="Events"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 frm-padmar">
+                  <div class="form-group">
+                    <div id="event-day-date" class="col-sm-12 input-group">
+                      <label for="inputEmail3" class="col-sm-12">Event Date</label>
+                      <div class='input-group date'>
+                      <input name="d" type="text" class="datepicker form-control" placeholder="Events Date" id="event_day_date"/>
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <label for="inputEmail3" class="col-sm-12">Venues</label>
+                  <div class="col-sm-12">
+                    <input name="v" type="text" class="form-control" placeholder="Venues"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 frm-padmar">
+                <div class="form-group">
+                  <div class="col-sm-12">
+                    <input type="submit" value="Search" class="btn btn-info martp"/>
+                 </div>
+               </div>
+              </div>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
-    <div class="col-lg-2">Venues<br>
-      <input name="v" type="text" class="form-control" placeholder="Venues"/>
-    </div>
-    <!-- <span class="input-group-btn "> -->
-      <div class="col-lg-2">
-        <input type="submit" value="Search" class="btn btn-info candbgq12"/>
-      </div>
-    <!-- </span> -->
-  <% end %>
+  </div>
 </div>
 
 <%#= render 'videos' %>
