--- a/app/views/statements/_form.html.erb
+++ b/app/views/statements/_form.html.erb
@@ -59,7 +59,7 @@
       <div class="form-group">
         <%= f.label :tags, class: "col-lg-3 control-label" %>
         <div class="col-lg-8">
-          <%= f.text_field :tag_list, class: "form-control"%>
+          <%= f.text_field :tag_list, class: "form-control", tag_list_item: @statement.tag_list %>
         </div>
       </div>
       <div class="form-group">
@@ -153,6 +153,14 @@
 
 <script>
 $(document).ready(function () {
-    $("#statement_tag_list").tokenInput('/people', { propertyToSearch: 'user_name', preventDuplicates: true, tokenValue: "user_name" });
+    var items = <%= raw @statement.tag_list.to_json %>;
+    console.log(items);
+    var i=0;
+    var tag_items = [];
+    for (i = 0; i < items.length; i++) {
+      hs = {user_name: items[i]}
+      tag_items.push(hs);
+    }
+    $("#statement_tag_list").tokenInput('/people', { propertyToSearch: 'user_name', preventDuplicates: true, tokenValue: "user_name", prePopulate: tag_items });
 });
 </script>
