--- a/app/views/statements/show.html.erb
+++ b/app/views/statements/show.html.erb
@@ -69,8 +69,7 @@
 <script type="text/javascript">
   $(document).on('click', '.edit-statement', function(){
     var id = $(this).attr('statement_id');
-    var path = "https://"+window.location.host+"/statements/"+id+"/edit"  
-    window.location.href = path
-
+    var path = "https://"+window.location.host+"/statements/"+id+"/edit";
+    window.location.href = path;
   });
 </script>
