--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -70,59 +70,56 @@
 
 <div class="container">
   <div class="row">
-<h4 class="col-lg-12 rsl-txt"> Result(s): <span id="searchResult"></span></h4>
-<div class="clearfix"></div>
-
-<div class="col-lg-12 frm-padmar2" style="margin-top: 20px">
-  <% if @statements.blank? %>
-  <div class="warning">Sorry, We don't found any result.</div>
-  <% else %>
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <th>Candidate(s)</th>
-        <th>Speaker(s)</th>
-        <th>Event Name</th>
-        <th>Location</th>
-        <th>Date</th>
-        <th>Public</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @statements.each do |statement| %>
-        <% if statement.candidate.present? %>
-          <% if search_filter(statement) %>
-            <tr class="search_row">
-              <td>
-                <%= link_to(statement.candidate.person_name, statement.candidate)%>
-              </td>
-              <td>
-                <%= statement.event_day.present? ? (statement.event_day.event.format_speakers.present? ? statement.event_day.event.format_speakers : 'N/A') : 'N/A' %>
-              </td>
-              <td>
-                <%= statement.event_day.present? ? (link_to statement.event_day.event.title, event_path(statement.event_day.event)) : 'N/A' %>
-              </td>
-              <td>
-                <%= statement.event_day.present? ? statement.event_day.event.format_location : 'N/A' %>
-              </td>
-              <td>
-                <%= statement.event_day.present? ? statement.event_day.date.strftime("%m/%d/%Y") : 'N/A' %>
-              </td>
-              <td>
-                <%= statement.event_day.present? ? (statement.event_day.event.public ? 'Yes' : 'No') : 'N/A' %>
-              </td>
+    <div class="clearfix"></div>
+      <div class="col-lg-12 frm-padmar2" style="margin-top: 20px">
+        <% if @statements.blank? %>
+        <div class="warning">Sorry, We don't found any result.</div>
+        <% else %>
+        <table class="table table-striped table-hover">
+          <thead>
+            <tr>
+              <th>Candidate(s)</th>
+              <th>Speaker(s)</th>
+              <th>Event Name</th>
+              <th>Location</th>
+              <th>Event Date</th>
+              <!-- <th>Public</th> -->
             </tr>
-          <% end %>
-        <% end %>
+          </thead>
+          <tbody>
+            <% @statements.each do |statement| %>
+              <% if statement.candidate.present? %>
+                <% if search_filter(statement) %>
+                  <tr class="search_row">
+                    <td>
+                      <%= statement.candidate.person_name %>
+                    </td>
+                    <td>
+                      <%= statement.event_day.present? ? (statement.event_day.event.format_speakers.present? ? statement.event_day.event.format_speakers : 'N/A') : 'N/A' %>
+                    </td>
+                    <td>
+                      <%= statement.event_day.present? ? (link_to statement.event_day.event.title, event_path(statement.event_day.event)) : 'N/A' %>
+                    </td>
+                    <td>
+                      <%= statement.event_day.present? ? statement.event_day.event.format_location : 'N/A' %>
+                    </td>
+                    <td>
+                      <%= statement.event_day.present? ? statement.event_day.date.strftime("%m/%d/%Y") : 'N/A' %>
+                    </td>
+                    <!-- <td>
+                      <%#= statement.event_day.present? ? (statement.event_day.event.public ? 'Yes' : 'No') : 'N/A' %>
+                    </td> -->
+                  </tr>
+                <% end %>
+              <% end %>
+            <% end %>
+          </tbody>
+        </table>
       <% end %>
-    </tbody>
-  </table>
-  <% end %>
-</div>
-</div>
+    </div>
+  </div>
 </div>
 
-<script>$('#searchResult').html($(".search_row").length)</script>
 <script>
 $('#event-day-date').datetimepicker({
   format: 'MM/DD/YYYY'
