--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -67,13 +67,23 @@
     </div>
   </div>
 </div>
-
 <div class="container">
   <div class="row">
     <div class="clearfix"></div>
       <div class="col-lg-12 frm-padmar2" style="margin-top: 20px">
+        <div class="no-result-found alert alert-danger col-lg-12" style="display: none;">Sorry, We didn't find any result.
+          <button type="button" class="close" data-dismiss="alert">×</button>
+        </div>
+      </div>
+    </div>
+  <div>
+</div>
+<div class="container" id="searchResult">
+  <div class="row">
+    <div class="clearfix"></div>
+      <div class="col-lg-12 frm-padmar2" style="margin-top: 20px">
         <% if @statements.blank? %>
-        <div class="warning">Sorry, We don't found any result.</div>
+          <div class="warning">Sorry, We didn't find any result.</div>
         <% else %>
         <table class="table table-striped table-hover">
           <thead>
@@ -92,7 +102,7 @@
                 <% if search_filter(statement) %>
                   <tr class="search_row">
                     <td>
-                      <%= statement.candidate.person_name %>
+                      <%= link_to statement.candidate.person_name, candidate_path(statement.candidate, search: "videos") %>
                     </td>
                     <td>
                       <%= statement.event_day.present? ? (statement.event_day.event.format_speakers.present? ? statement.event_day.event.format_speakers : 'N/A') : 'N/A' %>
@@ -120,6 +130,12 @@
   </div>
 </div>
 
+<script>
+if($(".search_row").length==0){
+  $('#searchResult').hide();
+  $('.no-result-found').show();
+} 
+</script>
 <script>
 $('#event-day-date').datetimepicker({
   format: 'MM/DD/YYYY'
