--- a/app/views/statements/browse.html.erb
+++ b/app/views/statements/browse.html.erb
@@ -9,66 +9,7 @@
 
 
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 frm-padmar">
-         <h2>The Answer</h2>
-      <div class="panel panel-default">
-        
-        <div class="panel-body martp2">
-          <%= form_tag("/search", :method=>"get") do %>
-            <div class="row">
-              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 frm-padmar">
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-12 adnwstdnt">Candidate Name</label>
-                  <div class="col-sm-12">
-                    <input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 frm-padmar">
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-12">Event</label>
-                  <div class="col-sm-12">
-                    <input name="e" type="text" class="form-control" placeholder="Events"/>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
-                <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 frm-padmar">
-                  <div class="form-group">
-                    <div id="event-day-date" class="col-sm-12 input-group">
-                      <label for="inputEmail3" class="col-sm-12">Event Date</label>
-                      <div class='input-group date'>
-                      <input name="d" type="text" class="datepicker form-control" placeholder="Events Date" id="event_day_date"/>
-                      <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                      </span>
-                    </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 frm-padmar">
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-12">Venues</label>
-                  <div class="col-sm-12">
-                    <input name="v" type="text" class="form-control" placeholder="Venues"/>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 frm-padmar">
-                <div class="form-group">
-                  <div class="col-sm-12">
-                    <input type="submit" value="Search" class="btn btn-info martp"/>
-                 </div>
-               </div>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render partial: "search_form" %>
 </div>
 
 <%= render 'videos' %>
@@ -76,5 +17,27 @@
 <script>
   $('#event-day-date').datetimepicker({
     format: 'MM/DD/YYYY'
+  });
+  $(document).ready(function(){
+    $("#advance-search-btn").on('click',function(e){
+      e.preventDefault();
+      $('.tag-search-block').removeClass('search-active');
+      $('.tag-search-block').addClass('search-inactive');
+      $('.advance-search-block').addClass('search-active');
+      $("#advance-search-btn").addClass('acor-tab-btn');
+      $("#advance-search-btn").removeClass('acor-tab-btn2');
+      $("#tag-search-btn").removeClass("acor-tab-btn");
+      $("#tag-search-btn").addClass("acor-tab-btn2");
+    });
+    $("#tag-search-btn").on('click',function(e){
+      e.preventDefault();
+      $("#tag-search-btn").addClass("acor-tab-btn");
+      $("#tag-search-btn").removeClass("acor-tab-btn2");
+      $("#advance-search-btn").addClass('acor-tab-btn2');
+      $("#advance-search-btn").removeClass("acor-tab-btn");
+      $('.tag-search-block').addClass('search-active');
+      $('.advance-search-block').addClass('search-inactive');
+      $('.advance-search-block').removeClass('search-active');
+    });
   });
 </script>
