--- a/app/views/statements/browse.html.erb
+++ b/app/views/statements/browse.html.erb
@@ -11,8 +11,9 @@
 <div class="container">
   <%= render partial: "search_form" %>
 </div>
-
-<%= render 'videos' %>
+<div class="container">
+  <%= render 'videos' %>
+</div>
 
 <script>
   $('#event-day-date').datetimepicker({
