--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -36,7 +36,7 @@
 /*new css end*/
 .frm-padmar{margin:0px !important; padding:0px !important;}
 .martp{margin-top:25px;}
-.martp2{background:#ecf0f1!important; margin:0px !important; border:solid 1px #ccc; margin-bottom: 25px;}
+.martp2{background:#ecf0f1!important; padding-bottom: 30px !important; margin:0px !important; border:solid 1px #ccc; margin-bottom: 25px;}
 .frm-padmar2{padding:0px !important;}
 .rsl-txt{color:#134061; font-weight: bold; padding:0px !important;}
 
