--- a/app/views/search/_search_result.html.erb
+++ b/app/views/search/_search_result.html.erb
@@ -3,11 +3,11 @@
     <div class="col-lg-12"><%=AMERICA_NEW_YORK_TIME_ZONE.format_date(video.date)%></div>
     <h4 class="col-lg-12">
     <% if @current_user.admin? %>
-      <%=link_to "#{video.title}", edit_statement_path(video) %>
+      <%=link_to video.title.truncate(31), edit_statement_path(video), title: video.title  %>
     <% else %>
       <%=video.title %>
     <% end %>
     </h4>
-    <iframe src="<%=video.youtube_embed_url%>?hd=1&rel=0&autohide=1&showinfo=0" frameborder="0"></iframe>
+    <iframe class="col-lg-12 ifrmq" src="<%=video.youtube_embed_url%>?hd=1&rel=0&autohide=1&showinfo=0" frameborder="0"></iframe>
   </div>
 </div>
