--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -59,8 +59,11 @@
     $('#searchResult').hide();
     $('.no-result-found').show();
   }
-  $('#event-day-date').datetimepicker({
-    format: 'MM/DD/YYYY'
+  $('#from-date').datetimepicker({
+    format: 'DD/MM/YYYY'
+  });
+  $('#to-date').datetimepicker({
+    format: 'DD/MM/YYYY'
   });
   $(document).ready(function(){
     $("#advance-search-btn").on('click',function(e){
