--- a/app/views/statements/_search_form.html.erb
+++ b/app/views/statements/_search_form.html.erb
@@ -44,25 +44,18 @@
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-12 adnwstdnt">Candidate Name</label>
                   <div class="col-sm-12">
-                    <input name="q" type="text" class="form-control" placeholder="Candidate Name"/>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 frm-padmar">
-                <div class="form-group">
-                  <label for="inputEmail3" class="col-sm-12">Event</label>
-                  <div class="col-sm-12">
-                    <input name="e" type="text" class="form-control" placeholder="Events"/>
+                    <%=select_tag 'q', options_for_select(Candidate.approved_videos.map{ |u| [u.person_name, u.person_name] }), class: "form-control" %>
+                    <!-- <input name="q" type="text" class="form-control" placeholder="Candidate Name"/> -->
                   </div>
                 </div>
               </div>
               <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 frm-padmar">
                   <div class="form-group">
-                    <div id="event-day-date" class="col-sm-12 input-group">
+                    <div id="from-date" class="col-sm-12 input-group">
                       <label for="inputEmail3" class="col-sm-12">Event Date</label>
                       <div class='input-group date'>
-                      <input name="d" type="text" class="datepicker form-control" placeholder="Events Date" id="event_day_date"/>
+                      <input name="from" type="text" class="datepicker form-control" placeholder="From" id="from_date"/>
                       <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                       </span>
@@ -71,7 +64,22 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 frm-padmar">
+              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 frm-padmar">
+                  <div class="form-group">
+                    <div id="to-date" class="col-sm-12 input-group">
+                      <label for="inputEmail3" class="col-sm-12">Event Date</label>
+                      <div class='input-group date'>
+                      <input name="to" type="text" class="datepicker form-control" placeholder="To" id="to_date"/>
+                      <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                      </span>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-2 col-sm-6 col-xs-12 frm-padmar">
                 <div class="form-group">
                   <label for="inputEmail3" class="col-sm-12">Venues</label>
                   <div class="col-sm-12">
